# cswp

./: CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENCE.txt  LICENSE.md  OWNERS  README  README.md  print_env.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md  submit-question.md
client/: CMakeLists.txt
client/cdebug/: CMakeLists.txt  cdebug_c_wrapper.cpp  cswp_buffer.c  cswp_client.c  cswp_client_commands.c  cswp_client_common.c  cswp_client_nv_ext_commands.c  cswp_client_plat_if.cpp
client/cdebug/include/: cswp_buffer.h  cswp_client.h  cswp_client_commands.h  cswp_client_common.h  cswp_client_ex.h  cswp_client_nv_ext_commands.h  cswp_client_plat_if.h  cswp_types.h
client/common/: transport_cfg.h
client/cstrace/: CMakeLists.txt  cstrace_base.cpp  cstrace_plat_if.cpp  cstrace_usb.cpp
client/cstrace/include/: cstrace_base.h  cstrace_ex.h  cstrace_plat_if.h  cstrace_types.h  cstrace_usb.h
client/plat_usb_if/: CMakeLists.txt  usb_device.cpp  usb_device_linux.cpp
client/plat_usb_if/include/: plat_sync_prim.h  usb_device.h  usb_device_linux.h
client_utility/: CMakeLists.txt  README  ccu_cswp.cpp  ccu_in.cpp  ccu_out.cpp  cdebug_trnsprt_cfg.txt  cstrace_trnsprt_cfg.txt  dummy_server_main.cpp  main.cpp
client_utility/include/: ccu.h  ccu_in.h  ccu_out.h
tests/: CMakeLists.txt  README
tests/ccu/: README  dev_async1_cmd.sh  dev_async2_cmd.sh  dev_basic_cmds.sh  utility.sh
tests/ccu/dev0/: dev0_dumpmem_cmd.sh  dev0_fillmem_cmd.sh  dev0_getmem_cmd.sh  dev0_getreg_cmd.sh  dev0_setmem_cmd.sh  dev0_setreg_cmd.sh
tests/ccu/dev1/: dev1_dumpmem_cmd.sh  dev1_fillmem_cmd.sh  dev1_getmem_cmd.sh  dev1_setmem_cmd.sh
tests/ccu/dev2/: dev2_getreg_cmd.sh  dev2_setreg_cmd.sh
tests/ccu_tcp/: CMakeLists.txt  README  ccu_over_socket_test.sh
